[gd_scene load_steps=7 format=3 uid="uid://y10b8tepf30m"]

[ext_resource type="Script" uid="uid://bosu2hjrafceo" path="res://Classes/TileQuestion/question_tile.gd" id="1_ssvs3"]
[ext_resource type="Theme" uid="uid://dpeodv265m7jd" path="res://Art/Theme/QuestionTileTheme.tres" id="2_54ayr"]
[ext_resource type="Theme" uid="uid://bseckuk4rs2ug" path="res://Art/Theme/QuestionBoxTheme.tres" id="3_dtf81"]

[sub_resource type="ImageTexture" id="ImageTexture_dtf81"]

[sub_resource type="ImageTexture" id="ImageTexture_2si70"]

[sub_resource type="ImageTexture" id="ImageTexture_4qu7x"]

[node name="QuestionTile" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_ssvs3")

[node name="Tile" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme = ExtResource("2_54ayr")
metadata/midpoint = Vector2(0, 0)

[node name="Score" type="RichTextLabel" parent="Tile"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.8
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1, 1.25)
mouse_filter = 2
theme = ExtResource("2_54ayr")
bbcode_enabled = true
text = "[b]$100"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Button" type="Button" parent="Tile"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_54ayr")

[node name="QuestionCanvas" type="CanvasLayer" parent="."]

[node name="VSplitContainer" type="VSplitContainer" parent="QuestionCanvas"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 0
theme_override_icons/grabber = SubResource("ImageTexture_dtf81")
theme_override_icons/h_grabber = SubResource("ImageTexture_2si70")
theme_override_icons/v_grabber = SubResource("ImageTexture_4qu7x")
dragging_enabled = false

[node name="QuestionBox" type="Panel" parent="QuestionCanvas/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("3_dtf81")

[node name="QuestionText" type="RichTextLabel" parent="QuestionCanvas/VSplitContainer/QuestionBox"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.1
anchor_right = 0.9
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_dtf81")
bbcode_enabled = true
text = "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed in purus velit. Integer cursus vestibulum laoreet. Sed sit amet vestibulum libero, sed consequat sem."
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnswerBox" type="Panel" parent="QuestionCanvas/VSplitContainer"]
layout_mode = 2
size_flags_vertical = 3
mouse_filter = 2
theme = ExtResource("3_dtf81")

[connection signal="pressed" from="Tile/Button" to="." method="tile_clicked"]
